--- a/hw3/uioo.css
+++ b/hw3/uioo.css
@@ -153,7 +153,7 @@ body{
 }
 .overlay{
     position: absolute;
-    width: 100%;
+    width: 1900px;
     top: 80px;
     text-align: center;
     vertical-align: middle;
